Exchange all the API usage to be on the new server version. Add Submit button All the done successfully

--- a/app/src/main/res/values/strings_fr.xml
+++ b/app/src/main/res/values/strings_fr.xml
@@ -8,4 +8,11 @@
     <string name="id_rejected_please_scan_again">%1$s Identifiant %2$s incorrect. Recommencez.</string>
     <string name="climber_and_bloc_successfully_registered">Validé</string>
     <string name="app_logo">Application logo</string>
+    <string name="server_address">Adresse du serveur</string>
+    <string name="save">Ok</string>
+    <string name="back">Précédent</string>
+    <string name="send">Envoyer</string>
+    <string name="submit_failed">Erreur de dialogue avec le serveur</string>
+    <string name="json_parsing_error">Le retour du serveur en format incorrecte</string>
+    <string name="network_error">Aucun accès au serveur</string>
 </resources>
