Add application version inside setting page The setting page server setting now open a keyboard with done button Server address setted to my home raspberry Remove AZTEC barecode Add BareCode scanner dependency installation => Should be tested

--- a/app/src/main/res/values/strings_fr.xml
+++ b/app/src/main/res/values/strings_fr.xml
@@ -15,4 +15,5 @@
     <string name="submit_failed">Erreur de dialogue avec le serveur</string>
     <string name="json_parsing_error">Le retour du serveur en format incorrecte</string>
     <string name="network_error">Aucun accès au serveur</string>
+    <string name="version">Version: %1$s</string>
 </resources>
