improve the url server setting checking

--- a/app/src/main/res/values/strings_fr.xml
+++ b/app/src/main/res/values/strings_fr.xml
@@ -16,4 +16,5 @@
     <string name="json_parsing_error">Le retour du serveur en format incorrecte</string>
     <string name="network_error">Aucun accès au serveur</string>
     <string name="version">Version: %1$s</string>
+    <string name="invalid_server_address">Error dans l\'adresse du serveur</string>
 </resources>
